feat: hide ru lang

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -11959,7 +11959,7 @@ input {
   }
 }
 .locale {
-  display: inline-block !important;
+  display: none !important;
   margin-left: 25px;
   width: 36px;
   height: 27px;
