--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -10823,7 +10823,7 @@ input {
 }
 
 .locale {
-  display: inline-block !important;
+  display: none !important;
   margin-left: 25px;
   width: 36px;
   height: 27px;
